Add Feding API methods
